# MedMatch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt
checkpoint/cp3/: update6.md
data/med_match/: med_match - iv_c.csv  med_match - iv_c_no_route.csv  med_match - iv_i.csv  med_match - iv_i_no_route.csv  med_match - iv_i_p_route.csv  med_match - iv_p.csv  (+4 more)
datasets/: MedMatch Dataset No Routes.xlsx  MedMatch Dataset for Experiment_ Final.xlsx  MedMatch2.xlsx
docs/: DATA_CHANGELOG.md  MERGE_NOTES.md  architecture.md  experiment_overview.md  local_workflow.md  refactor_parity.md  refactor_parity_iv_intermittent.md  refactor_remote_parity.md
results/: accuracy_formula_description.txt  clean_results.py  convert_table.py  entity_accuracy_table.csv  error_analysis_route.py  evaluation_match.py  evaluation_results.json  evaluation_route.py  route_accuracy_table.csv  route_accuracy_table.txt  route_errors.csv
scripts/: __init__.py  probing_medmatch.py  probing_medmatch_route_selection_test.py  rougerx.py  run_baseline.py  run_cot.py  run_exemplar_rag.py  run_normalization.py  run_parity.py  run_single.py  run_tier3.py  summarize_medmatch_runs.py  survey2gpt5.py
src/: __init__.py  prompt_medmatch.py  prompt_rougerx.py
tests/: conftest.py  test_medmatch2_dataset_consistency.py  test_parity.py  test_po_solid_total_dose_prompting.py  test_portability.py  test_prompt_snapshots.py  test_qwen_local_pipeline.py  test_remote_api_backend.py  test_run_single.py  test_runners.py  test_schema.py  test_stage2_parity.py
(+100 files in other folders)
